<resources>
    <string name="app_name">Instagram</string>
    <string name="some_error">Some error occurred!</string>
    <string name="cadastra_se">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="usuario">Usuário</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="no_internet">Equipamento sem acesso a internet!</string>
    <string name="error_create_user">Erro ao criar o usuário!</string>
    <string name="enter_the_data">Informe todos os dados!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="publicacao">Publicações</string>
    <string name="seguidor">Seguidores</string>
    <string name="seguindo">Seguindo</string>
    <string name="number_0">0</string>
    <string name="salvar_informacoes">Salvar Informações</string>
    <string name="nome_usuario">Nome usuário</string>
    <string name="alterar_foto">Alterar foto</string>
    <string name="search_user">Buscar usuários</string>
    <string name="seguir">Seguir</string>
    <string name="open_galery">Abrir Galeria</string>
    <string name="open_cam">Abrir Câmera</string>
    <string name="filter">Filtros</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="publish">Publicar</string>
    <string name="description">Descrição</string>
    <string name="error_load_user">Erro ao carregar o perfil!</string>
    <string name="visualizar_coment_rios">Visualizar comentários</string>
    <string name="comments">Comentários</string>
</resources>
