<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.editprofile.EditProfileActivity">

    <include layout="@layout/toolbar"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/avatar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:id="@+id/imgProfileUser"
                android:layout_margin="10dp"/>
        <TextView
                android:text="@string/alterar_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtUpdatePhoto"
                android:textStyle="bold"
                android:textColor="@color/blue_dark"
                android:layout_margin="10dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtNameUser"
                android:hint="@string/nome_usuario"
                android:drawableTint="@android:color/darker_gray"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:layout_margin="10dp" android:drawablePadding="5dp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtEmailUser"
                android:hint="@string/e_mail"
                android:drawableTint="@android:color/darker_gray"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:layout_margin="10dp" android:drawablePadding="5dp"/>
        <Button
                android:text="@string/salvar_informacoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSaveInfomation"
                android:layout_margin="10dp"/>
    </LinearLayout>

</LinearLayout>