<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroud_gradient_login"
        tools:context=".ui.register.RegisterActivity">

    <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/edtNameUsuario"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:padding="10dp"
            android:id="@+id/edtNameUsuario"
            android:hint="@string/usuario"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintBottom_toTopOf="@+id/edtEmailUsuario"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/background_box_text"
            android:layout_marginTop="16dp" android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:id="@+id/edtEmailUsuario"
            android:inputType="textWebEmailAddress"
            android:hint="@string/e_mail"
            app:layout_constraintTop_toBottomOf="@+id/edtNameUsuario"
            app:layout_constraintBottom_toTopOf="@+id/edtPasswordUsuario"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/background_box_text"
            android:layout_marginTop="16dp" android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:id="@+id/edtPasswordUsuario"
            android:inputType="textPassword"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/edtEmailUsuario"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/background_box_text"
            android:layout_marginTop="16dp" android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"/>
    <Button
            android:text="@string/cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPasswordUsuario"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_button"
            android:layout_marginTop="16dp" android:textColor="@android:color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>