<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroud_gradient_login"
        tools:context=".ui.login.LoginActivity">

    <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/edtPassword"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.31"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:id="@+id/edtEmail"
            android:hint="@string/e_mail"
            android:background="@drawable/background_box_text"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/gray_medium"
            android:textColorHint="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/edtPassword"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp" app:layout_constraintVertical_chainStyle="packed"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="10dp"
            android:background="@drawable/background_box_text"
            android:ems="10"
            android:id="@+id/edtPassword"
            android:hint="@string/password"
            android:textColor="@color/gray_medium"
            android:textColorHint="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/entrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:textColor="@android:color/white"
            android:background="@drawable/background_button"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            app:layout_constraintBottom_toTopOf="@+id/txtRegister"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/cadastra_se"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtRegister"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintBottom_toTopOf="@+id/progressBarLogin"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarLogin"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegister"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>