<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.profile.ProfileFragment" android:id="@+id/qtPublicao">

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline2"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.96"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.30"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline3"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.52"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline4"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.72"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBarProfile"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/imgProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.548"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/publicacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPublicao"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <TextView
            android:text="@string/seguidor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSeguidor"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/qtSeguidor"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"/>
    <TextView
            android:text="@string/seguindo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSeguindo"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/qtSeguindo"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            android:layout_marginLeft="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
    />
    <TextView
            android:text="@string/number_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtPublicao"
            app:layout_constraintStart_toStartOf="@+id/txtPublicao"/>
    <TextView
            android:text="@string/number_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/qtSeguidor"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtSeguidor"
            app:layout_constraintEnd_toEndOf="@+id/txtSeguidor"/>
    <TextView
            android:text="@string/number_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/qtSeguindo"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtSeguindo"
            app:layout_constraintEnd_toEndOf="@+id/txtSeguindo"/>
    <Button
            android:text="@string/edit_profile"
            android:layout_width="0dp"
            android:layout_height="21dp"
            android:id="@+id/buttonEdtProfile"
            android:textSize="12sp"
            android:background="@drawable/background_bottom_profile"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txtSeguidor"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"/>
    <GridView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/griviewProfile"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:id="@+id/guideline5"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.16"/>

</androidx.constraintlayout.widget.ConstraintLayout>